Mining module JSON